<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/spacing_16">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/select_unit_of_measurement"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_unit_of_measurement"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_unit_of_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8dp"
        app:layout_constraintTop_toBottomOf="@id/select_unit_of_measurement">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/unit_standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard"
            app:buttonTint="@color/purple_700"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/unit_metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric"
            app:buttonTint="@color/purple_700" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/unit_imperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperial"
            app:buttonTint="@color/purple_700" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_bookmarked_cities"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/clear_bookmarked_cities"
        android:textColor="@color/purple_700"
        app:icon="@drawable/ic_baseline_delete_forever_24"
        app:iconTint="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_unit_of_measurement" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/save_changes"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/clear_bookmarked_cities" />
</androidx.constraintlayout.widget.ConstraintLayout>